--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
-.create-btn {
-    position: fixed;
-    right: 48px;
-    bottom: 48px;
+/* Fonts */
+* {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .material-icons {
@@ -29,6 +28,19 @@
     font-feature-settings: 'liga';
 }
 
+/* General - Partials */
+
+#navbar {
+    background-color: #fff;
+    border-bottom: 1px solid rgba(0,0,0,.14);
+}
+
+.create-btn {
+    position: fixed;
+    right: 48px;
+    bottom: 48px;
+}
+
 .card-img-top {
     width: 100%;
     height: 10vw;
@@ -42,10 +54,12 @@
     border-top: 1px solid rgba(255, 255, 255, 0.8);
 }
 
-.js-cookie-consent {
-    bottom: 0px;
-}
-
 .films-show-poster {
     width: 100%;
+    border-radius: .25rem;
+}
+
+/* JS Cookie */
+.js-cookie-consent {
+    bottom: 0px;
 }
